Chart Backgrounds and Link Repairs

--- a/airMonitor/templates/airMonitor/base.html
+++ b/airMonitor/templates/airMonitor/base.html
@@ -35,7 +35,7 @@
 
             <!-- logo -->
 	    <div class="logo">
-            <a class="navbar-brand" href="/landing"> 
+            <a class="navbar-brand" href="/"> 
                 <!-- if an image for logo -->
                 <img src="https://www.airaberdeen.org/wp-content/uploads/2020/07/cropped-hex-wind-header-2.png" alt="Logo" style="width:150px;" class="rounded-pill">
             </a> 
@@ -52,7 +52,7 @@
 
                     <!-- links -->
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/" name="homeLink"> Map </a>
+                        <a class="nav-link text-white" href="/map" name="homeLink"> Map </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/sensorListPage" name="listLink"> Sensor List </a>
