--- a/airMonitor/templates/airMonitor/landing.html
+++ b/airMonitor/templates/airMonitor/landing.html
@@ -33,7 +33,7 @@
 
             <!-- Column 1: map -->
             <div class="col-md-4 col-xs-4 col-sm-4">
-                <a class="nav-link text-dark" href="/" name="homeLink">
+                <a class="nav-link text-dark" href="map/" name="homeLink">
                     <div class="row mx-1 div3 ex3">
                         <h2> map </h2>
                         <p> xxxxxxxxxxxxxxxx </p>
