--- a/airMonitor/templates/airMonitor/sensor_BME.html
+++ b/airMonitor/templates/airMonitor/sensor_BME.html
@@ -178,7 +178,33 @@
 			labels: {{ labelList|safe }}
 		},
 		options: {
-			responsive: true
+			scales: {
+	    	  yAxes: [{
+	    	    ticks:{
+	    	      fontColor : "#000",
+	    	      fontSize : 14
+	    	    },
+	    	    gridLines:{
+	    	      color: "#000",
+	    	      lineWidth:1,
+	    	      zeroLineColor :"#000",
+	    	      zeroLineWidth : 2
+	    	    },
+	    	  }],
+	    	  xAxes: [{
+	    	    ticks:{
+	    	      fontColor : "#000",
+	    	      fontSize : 14
+	    	    },
+	    	    gridLines:{
+	    	      color: "#0001",
+	    	    }
+	    	  }]
+	    	},
+			responsive:true,
+	    	chartArea: {
+        		backgroundColor: 'rgba(255, 255, 255, 0.5)'
+    		}
 		}
 	};
 	var config2 = {
@@ -193,7 +219,33 @@
 			labels: {{ labelList|safe }}
 		},
 		options: {
-			responsive: true
+			scales: {
+	    	  yAxes: [{
+	    	    ticks:{
+	    	      fontColor : "#000",
+	    	      fontSize : 14
+	    	    },
+	    	    gridLines:{
+	    	      color: "#000",
+	    	      lineWidth:1,
+	    	      zeroLineColor :"#000",
+	    	      zeroLineWidth : 2
+	    	    },
+	    	  }],
+	    	  xAxes: [{
+	    	    ticks:{
+	    	      fontColor : "#000",
+	    	      fontSize : 14
+	    	    },
+	    	    gridLines:{
+	    	      color: "#0001",
+	    	    }
+	    	  }]
+	    	},
+			responsive:true,
+	    	chartArea: {
+        		backgroundColor: 'rgba(255, 255, 255, 0.5)'
+    		}
 		}
 	};
 	var config3 = {
@@ -208,9 +260,47 @@
 			labels: {{ labelList|safe }}
 		},
 		options: {
-			responsive: true
+			scales: {
+	    	  yAxes: [{
+	    	    ticks:{
+	    	      fontColor : "#000",
+	    	      fontSize : 14
+	    	    },
+	    	    gridLines:{
+	    	      color: "#000",
+	    	      lineWidth:1,
+	    	      zeroLineColor :"#000",
+	    	      zeroLineWidth : 2
+	    	    },
+	    	  }],
+	    	  xAxes: [{
+	    	    ticks:{
+	    	      fontColor : "#000",
+	    	      fontSize : 14
+	    	    },
+	    	    gridLines:{
+	    	      color: "#0001",
+	    	    }
+	    	  }]
+	    	},
+			responsive:true,
+	    	chartArea: {
+        		backgroundColor: 'rgba(255, 255, 255, 0.5)'
+    		}
 		}
 	};
+	Chart.pluginService.register({
+        beforeDraw: function (chart, easing) {
+            if (chart.config.options.chartArea && chart.config.options.chartArea.backgroundColor) {
+                var ctx = chart.chart.ctx;
+                var chartArea = chart.chartArea;
+                ctx.save();
+                ctx.fillStyle = chart.config.options.chartArea.backgroundColor;
+                ctx.fillRect(chartArea.left, chartArea.top, chartArea.right - chartArea.left, chartArea.bottom - chartArea.top);
+                ctx.restore();
+            }
+        }
+    });	
 	window.onload = function() {
 		var ctx1 = document.getElementById('line-chart1').getContext('2d');
 		window.myLine1 = new Chart(ctx1, config1);	
