--- a/airMonitor/templates/airMonitor/base.html
+++ b/airMonitor/templates/airMonitor/base.html
@@ -52,13 +52,13 @@
 
                     <!-- links -->
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/map" name="homeLink"> Map </a>
+                        <a class="nav-link text-white links" href="/map" name="homeLink"> Map </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/sensorListPage" name="listLink"> Sensor List </a>
+                        <a class="nav-link text-white links" href="/sensorListPage" name="listLink"> Sensor List </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/comparisons" name="comparisonLink"> Comparisons </a>
+                        <a class="nav-link text-white links" href="/comparisons" name="comparisonLink"> Comparisons </a>
                     </li>
                 </ul>
             </div>
