--- a/airMonitor/static/landing.css
+++ b/airMonitor/static/landing.css
@@ -1,23 +1,135 @@
+/* CSS code for dynamic background image from and based on https://codepen.io/vavik96/pen/vEdMXM */
+/* @import url(https://fonts.googleapis.com/css?family=Oswald); */
+
+/* Cloud 1 */
+@keyframes clouds-loop-1 {
+    to {
+        background-position: -1000px 0;
+    }
+}
+.clouds-1 {
+    background-image: url("https://s.cdpn.io/15514/clouds_2.png");
+    /* background-color: rgb(85, 162, 251); */
+    animation: clouds-loop-1 20s infinite linear;
+}
+
+/* Cloud 2 
+@keyframes clouds-loop-2 {
+    to {
+        background-position: -1000px 0;
+    }
+}
+.clouds-2 {
+    background-image: url("https://s.cdpn.io/15514/clouds_1.png");
+    animation: clouds-loop-2 15s infinite linear;
+
+}*/
+
+/* Cloud 3 */
+@keyframes clouds-loop-3 {
+    to {
+        background-position: -1579px 0;
+    }
+}
+.clouds-3 {
+    background-image: url("https://s.cdpn.io/15514/clouds_3.png");
+    animation: clouds-loop-3 17s infinite linear;
+}
+
 body {
-    background-image: url('https://rohe.geenius.ee/app/uploads/sites/10/2021/03/70eac4a3e03bda83ed0cb41e0d86169d.jpg');
-    /* background-color: #cccccc; */
-    background-repeat:no-repeat;
-    background-size: 100% 100%;
+    /* background: url('https://c1.wallpaperflare.com/preview/725/423/706/sky-blue-blue-sky-background.jpg'); */
+    /* background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgb(85, 162, 251)), color-stop(100%, rgb(52, 144, 249))); 
+    background: -moz-linear-gradient(lightblue, rgb(85, 162, 251));
+    background: -webkit-linear-gradient(lightblue, rgb(85, 162, 251));*/
+    background: linear-gradient( rgb(59, 150, 253), lightblue); 
+    /* background-color: rgb(64, 178, 249); */
+    vertical-align: middle;
+    /* background-size: 100% 100%; */
+    background-attachment: fixed;  /* filling the whole page with colour */
+    word-wrap: break-word;
+    word-break: normal;
 }
 
-.div1{
-    border-radius:20px; 
-    background-color: rgba(255,255,255,0.5); 
-    min-height: 30vh;"
+.clouds {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
+    opacity: 0.4;
+    pointer-events: none;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
 }
 
-.div3{
-    border-radius:20px; 
-    background-color: rgba(255,255,255,0.5); 
+.clouds-1, .clouds-2, .clouds-3 {
+    background-repeat: repeat-x;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 500px;
+}
+
+/* greeting */
+#greeting{
+    position: relative; 
+    margin-top: 100px; 
+    font-family: 'Brush Script MT', cursive; 
+    font-size: 70px;
+    color: blue;
+}
+
+/* For setting div */
+#div_row_intro{
+    position: relative;
+    margin-top: 120px; 
+    /* height: 250px;  */
+    border-radius: 20px;
+    /* text-align: center; */
+    background-color: rgba(87, 6, 248, 0.1);
+    /* overflow: hidden; */
     
 }
 
-div.ex3:hover, div.ex3:active {
-    background: rgb(185, 184, 184, 0.5);
+.div_row_links{
+    position: relative;
+    /* height: 550px; */
+    border-radius: 20px;
+    /* text-align: center; */
+    /* margin: auto;  */
+    background-color: rgba(87, 6, 248, 0.1);
+    /* overflow: hidden; */
+}
+
+/* hover: grow, color */
+.grow { 
+    transition: transform .2s;
+    /* margin: 0 auto;  */
+}
+
+.grow:hover { 
+    transform: scale(1.1); 
+}
+
+.color:hover, .color:active {
+    background: rgba(6, 67, 252, 0.3);
+    color: lightblue;
+}
+
+.p_font{
+    font-size: 20px;
+    /* text-align: center; */
+} 
+
+/* code from https://www.w3schools.com/howto/howto_css_equal_height.asp */
+.col-container {
+  display: flex;
+  width: 100%;
+}
+
+.cols {
+  flex: 1;
+  padding: 16px;
 }
 
