--- a/airMonitor/templates/airMonitor/sensor_SDS.html
+++ b/airMonitor/templates/airMonitor/sensor_SDS.html
@@ -95,7 +95,7 @@
 	<div class="row">
 		<div class="col table-responsive"> 
 			<table class="table table-striped table-bordered table-hover align-middle caption-top w-100" style="text-align: center;">
-				<caption style="text-align:center; color: black;"> <h1>Live Sensor Data Table </h1> </caption>
+				<caption style="text-align:center; color: black;"> <h1>Current Weather</h1></caption>
 				<thead style="background-color: darkgreen; color: white;">
 					<tr>
 						<th> Timestamp </th>
@@ -193,6 +193,7 @@
 		{% for date in historyRange %} 
 		<button class="tablinks" onclick="openDate(event, '{{date.0}}')" id="defaultOpen">{{date.0}}</button>
 		{% endfor %}
+		<button class="tablinks" onclick="openDate(event, 'Past')">Past Data</button>
 	</div>
 	<br>
 </div>
